[package]
name = "claude-code-manager"
version = "0.1.0"
edition = "2021"
description = "极速、安全的 Claude Code 多环境管理器"

[[bin]]
name = "ccm"
path = "src/main.rs"

[dependencies]
# 路由与错误处理
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# TUI 交互
inquire = "0.7"
# 数据解析
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 路径处理
dirs = "5"
# 兼容读取 cc-switch
rusqlite = { version = "0.31", features = ["bundled"] }
# 加解密与安全
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
